--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
+  "name": "nova-brand",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.x",
-    "react": "18.x",
-    "react-dom": "18.x"
+    "next": "13.4.18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "jspdf": "^2.5.1",
+    "openai": "^4.10.0",
+    "react-konva": "^18.0.5"
   }
 }
