--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "nova-brand",
   "version": "1.0.0",
   "private": true,
+  "description": "NovaBrand: AI-powered Brand Generator and Personal Brand Booster",
+  "author": "Houssam",
+  "license": "MIT",
+  "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "13.4.18",
@@ -14,6 +23,16 @@
     "react-hook-form": "^7.45.1",
     "jspdf": "^2.5.1",
     "openai": "^4.10.0",
-    "react-konva": "^18.0.5"
+    "react-konva": "^18.0.5",
+    "clsx": "^1.2.1",
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
+    "next-i18next": "^13.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.18",
+    "prettier": "^3.0.0"
   }
 }
